# example-extract-collection-class

./: CMakeLists.txt
src/: CollectionClass.cpp  CollectionClass.hpp  DataBase.hpp  LargeTangledClass.cpp  LargeTangledClass.hpp
